// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsItem render should default to an unknown user if null is provided for modified_by 1`] = `
<div
  className="bcs-VersionsItem-log"
  data-testid="bcs-VersionsItem-log"
  title={
    <FormattedMessage
      defaultMessage="Unknown"
      id="be.sidebarVersions.versionUserUnknown"
    />
  }
>
  <FormattedMessage
    defaultMessage="Uploaded by {name}"
    id="be.sidebarVersions.uploadedBy"
    values={
      Object {
        "name": <FormattedMessage
          defaultMessage="Unknown"
          id="be.sidebarVersions.versionUserUnknown"
        />,
      }
    }
  />
</div>
`;

exports[`elements/content-sidebar/versions/VersionsItem render should default to an unknown user if undefined is provided for modified_by 1`] = `
<div
  className="bcs-VersionsItem-log"
  data-testid="bcs-VersionsItem-log"
  title={
    <FormattedMessage
      defaultMessage="Unknown"
      id="be.sidebarVersions.versionUserUnknown"
    />
  }
>
  <FormattedMessage
    defaultMessage="Uploaded by {name}"
    id="be.sidebarVersions.uploadedBy"
    values={
      Object {
        "name": <FormattedMessage
          defaultMessage="Unknown"
          id="be.sidebarVersions.versionUserUnknown"
        />,
      }
    }
  />
</div>
`;

exports[`elements/content-sidebar/versions/VersionsItem render should render a deleted version correctly 1`] = `
<div
  className="bcs-VersionsItem"
>
  <VersionsItemButton
    fileId="123"
    isCurrent={false}
    isDisabled={true}
    isSelected={false}
    onClick={[Function]}
  >
    <div
      className="bcs-VersionsItem-badge"
    >
      <VersionsItemBadge
        isDisabled={true}
        versionNumber={1}
      />
    </div>
    <div
      className="bcs-VersionsItem-details"
    >
      <div
        className="bcs-VersionsItem-log"
        data-testid="bcs-VersionsItem-log"
        title="Test User"
      >
        <FormattedMessage
          defaultMessage="Deleted by {name}"
          id="be.sidebarVersions.deletedBy"
          values={
            Object {
              "name": "Test User",
            }
          }
        />
      </div>
      <div
        className="bcs-VersionsItem-info"
      >
        <time
          className="bcs-VersionsItem-date"
          dateTime={2019-03-01T08:00:00.000Z}
        >
          <ReadableTime
            alwaysShowTime={true}
            relativeThreshold={300000}
            timestamp={1551427200000}
          />
        </time>
        <span
          className="bcs-VersionsItem-size"
        >
          10 KB
        </span>
      </div>
    </div>
  </VersionsItemButton>
  <VersionsItemActions
    fileId="123"
    isCurrent={false}
    isDeleted={true}
    isDownloadable={false}
    isSelected={false}
    onDelete={[Function]}
    onDownload={[Function]}
    onPreview={[Function]}
    onPromote={[Function]}
    onRestore={[Function]}
    permissions={
      Object {
        "can_delete": true,
        "can_preview": true,
      }
    }
  />
</div>
`;

exports[`elements/content-sidebar/versions/VersionsItem render should render an uploaded version correctly 1`] = `
<div
  className="bcs-VersionsItem"
>
  <VersionsItemButton
    fileId="123"
    isCurrent={false}
    isDisabled={false}
    isSelected={false}
    onClick={[Function]}
  >
    <div
      className="bcs-VersionsItem-badge"
    >
      <VersionsItemBadge
        isDisabled={false}
        versionNumber={1}
      />
    </div>
    <div
      className="bcs-VersionsItem-details"
    >
      <div
        className="bcs-VersionsItem-log"
        data-testid="bcs-VersionsItem-log"
        title="Test User"
      >
        <FormattedMessage
          defaultMessage="Uploaded by {name}"
          id="be.sidebarVersions.uploadedBy"
          values={
            Object {
              "name": "Test User",
            }
          }
        />
      </div>
      <div
        className="bcs-VersionsItem-info"
      >
        <time
          className="bcs-VersionsItem-date"
          dateTime={2019-03-01T08:00:00.000Z}
        >
          <ReadableTime
            alwaysShowTime={true}
            relativeThreshold={300000}
            timestamp={1551427200000}
          />
        </time>
        <span
          className="bcs-VersionsItem-size"
        >
          10 KB
        </span>
      </div>
    </div>
  </VersionsItemButton>
  <VersionsItemActions
    fileId="123"
    isCurrent={false}
    isDeleted={false}
    isDownloadable={false}
    isSelected={false}
    onDelete={[Function]}
    onDownload={[Function]}
    onPreview={[Function]}
    onPromote={[Function]}
    onRestore={[Function]}
    permissions={
      Object {
        "can_delete": true,
        "can_preview": true,
      }
    }
  />
</div>
`;
